--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tiptap/extension-bullet-list": "^2.9.1",
     "@tiptap/extension-code": "^2.9.1",
     "@tiptap/extension-code-block": "^2.9.1",
     "@tiptap/extension-code-block-lowlight": "^2.9.1",
+    "@tiptap/extension-heading": "^2.9.1",
     "@tiptap/extension-image": "^2.9.1",
     "@tiptap/extension-list-item": "^2.9.1",
     "@tiptap/extension-ordered-list": "^2.9.1",
+    "@tiptap/extension-paragraph": "^2.9.1",
     "@tiptap/extension-placeholder": "^2.9.1",
     "@tiptap/extension-strike": "^2.9.1",
     "@tiptap/extension-text-align": "^2.9.1",
@@ -24,12 +27,16 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@uploadthing/react": "^7.1.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "lowlight": "^3.1.0",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-drag-drop-files": "^2.4.0",
+    "react-icons": "^5.3.0",
+    "uploadthing": "^7.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
