--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-code-block-lowlight": "^2.9.1",
     "@tiptap/extension-heading": "^2.9.1",
     "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-list-item": "^2.9.1",
     "@tiptap/extension-ordered-list": "^2.9.1",
     "@tiptap/extension-paragraph": "^2.9.1",
